# django_test_clickhouse

./: docker-compose.yml  pyproject.toml
clickhouse/: urls.py  views.py
clickhouse/services/: connect.py  create_db.py  graph.py
clickhouse/templates/clickhouse/: add.html  stat.html
config/: settings.py  urls.py
